Step3 (#2227)
* test: 테스트 추가 (2단계)

* refactor: 반복문 변경 (2단계)

* docs: 사다리 게임 실행 - 요구사항 분석 (3단계)

* feat: 사다리 게임 실행 - 구현 (3단계)